Added OpWrapper C99 gen for Core.NegOp (needed for blackscholes)